--- a/qdrant-landing/themes/qdrant/layouts/solutions/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/solutions/list.html
@@ -11,7 +11,7 @@
             <div class="d-flex col-lg-4 col-md-6 col-sm-12">
                 <!-- News block Two -->
                 <div class="news-block-two">
-                    <div class="inner-box">
+                    <div class="inner-box inner-box_pb">
                         <div class="upper-box">
                             <h4><a href="{{ .Params.default_link }}">{{ .Title }}</a></h4>
                             <!-- <div class="category">{{ .Params.subtitle }}</div> -->
@@ -24,15 +24,11 @@
                             {{ end }}
                         </div>
                         <div class="lower-box">
-                            <div class="clearfix">
-                                <p>{{ .Params.short_description | markdownify }}</p>
-                                <div class="pull-right">
-                                    <a href="{{ .Site.Params.mailchimp_contact_form }}" target="_blank" class="theme-btn btn-style-five btn-small">
-                                        <span class="txt">Contact Us</span>
-                                    </a>
-                                </div>
-                            </div>
+                            <p>{{ .Params.short_description | markdownify }}</p>
                         </div>
+                        <a href="{{ .Site.Params.mailchimp_contact_form }}" target="_blank" class="theme-btn btn-style-five btn-small">
+                            <span class="txt">Contact Us</span>
+                        </a>
                     </div>
                 </div>
             </div>
