--- a/qdrant-landing/themes/qdrant/static/css/blocks/_forms.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_forms.scss
@@ -44,6 +44,7 @@
   font-weight:700;
   color: var(--brand-secondary);
   line-height:1.3em;
+  font-size:36px;
 }
 
 .login-page-section .form-column .welcome{
