--- a/qdrant-landing/themes/qdrant/layouts/articles/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/list.html
@@ -11,22 +11,6 @@
             {{ $link = .Params.external_link }}
             {{ end }}
 
-            <article class="article article_bb col-12">
-                <div class="article__info">{{ .Date | time.Format ":date_long" }} | {{ .Params.author }}</div>
-                <a href="{{ $link }}" class="article__title article-title">
-                    <span class="article-title__image" >
-                        <img src="{{ .Params.preview_dir }}/thumb.jpg" alt="...">
-                    </span>
-                    <h2>
-                        {{ .Title }}
-                    </h2>
-                </a>
-                <p>{{ .Summary }}</p>
-                <div class="d-flex justify-content-end">
-                    <a href="{{ $link }}" target="_blank" class="theme-btn btn-style-five btn-style-five_small-md article__more-btn mb-5"><span
-                            class="txt">Learn More</span></a>
-                </div>
-            </article>
             {{ end }}
         </div>
         <div class="row clearfix pt-4">
@@ -42,7 +26,9 @@
 
             <!-- News block Two -->
 
-            {{ partial "article-card" (dict "context" . "classes" "article-card_border article-card_contrast article-card_content-style article-card_small-btn") }}
+            <div class="d-flex col-md-6 col-sm-12">
+                {{ partial "article-card" (dict "context" . "classes" "article-card_border article-card_contrast article-card_content-style article-card_small-btn") }}
+            </div>
 
 
             {{ end }}
