fixes for old pages

--- a/qdrant-landing/themes/qdrant/static/css/blocks/_banner.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_banner.scss
@@ -169,6 +169,7 @@
     h4 {
       color: var(--brand-dark-gray);
       font-size: lib.rem(24);
+      font-weight: 400;
     }
 
     .newsletter-form {
