--- a/qdrant-landing/themes/qdrant/static/css/_reset.scss
+++ b/qdrant-landing/themes/qdrant/static/css/_reset.scss
@@ -55,7 +55,7 @@ a:hover,a:focus,a:visited{
 
 h1,h2,h3,h4,h5,h6 {
   position:relative;
-  font-weight:normal;
+  font-weight:700;
   margin:0;
   background:none;
   line-height:1.6em;
