--- a/qdrant-landing/themes/qdrant/layouts/partials/benchmark_chart.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/benchmark_chart.html
@@ -1,4 +1,4 @@
-<div class="col benchmark-wrapper">
+<div class="benchmark-wrapper">
 
   <label for="datasets-selector-{{ .Params.id }}">Dataset:</label>
   <select name="datasets" id="datasets-selector-{{ .Params.id }}" onchange="renderSelected('{{ .Params.id }}')">
