--- a/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_article.scss
@@ -220,4 +220,8 @@ article aside[role="status"]:before {
   @include media-breakpoint-up(lg) {
     padding-top: lib.rem(38);
   }
+  &_benchmarks {
+    margin-left: 0;
+    margin-right: 9rem;
+  }
 }
