--- a/qdrant-landing/themes/qdrant/static/css/blocks/_optimized-section.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_optimized-section.scss
@@ -23,6 +23,23 @@
 
 .newsletter-form{
   margin-bottom:35px;
+
+  ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: var(--brand-gray);
+    opacity: 1;
+  }
+  ::-moz-placeholder { /* Firefox 19+ */
+    color: var(--brand-gray);
+    opacity: 1;
+  }
+  :-ms-input-placeholder { /* IE 10+ */
+    color: var(--brand-gray);
+    opacity: 1;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    color: var(--brand-gray);
+    opacity: 1;
+  }
 }
 
 .newsletter-form input[type="text"],
