pricing page fixes

--- a/qdrant-landing/themes/qdrant/layouts/pricing/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/pricing/list.html
@@ -35,7 +35,7 @@
                             <p><small>Build your MVP on an Open Source stack, or run scale-ready products in the cloud. Choose the right plan for your project.
                             </small></p>
 
-                            <a class="theme-btn btn-style-three mt-4" href="/solutions/">
+                            <a class="theme-btn btn-style-four btn-style-four_rounded btn-style-four_reversed btn-style-four_big mt-4" href="/solutions/">
                                 <span class="txt">What can I use Qdrant for?</span>
                             </a>
                         </div>
@@ -52,11 +52,13 @@
                     <div class="content-box">
                         <div class="price-box">
                             <span class="icon flaticon-skyline"></span> Free
-                            <span class="price-title">&nbsp;</span>
+                            <span class="price-title">Apache-2.0 license</span>
                         </div>
                         <div class="text">Build your AI-based applications using our leading open-source vector search technology.
                         </div>
-                        <a href="/documentation/quick_start/" class="start-btn theme-btn">Quick Start</a>
+                        <a href="/documentation/quick_start/" class="theme-btn btn-style-five btn-small w-100">
+                            <span class="txt">Quick Start</span>
+                        </a>
                         <ul class="price-list">
                             <li>Free & Open Forever</li>
                             <li>Self-hosted</li>
@@ -78,7 +80,9 @@
                         </div>
                         <div class="text">Scale your production solutions in the managed cloud without deployment and maintenance overhead.
                         </div>
-                        <a href="/surveys/cloud-request/" class="start-btn theme-btn">Join Cloud Beta</a>
+                        <a href="/surveys/cloud-request/" class="theme-btn btn-style-five btn-small w-100">
+                            <span class="txt">Join Cloud Beta</span>
+                        </a>
                         <ul class="price-list">
                             <li>Managed & Monitored by Us</li>
                             <li>High Availability & Performance
@@ -101,7 +105,9 @@
                         </div>
                         <div class="text">Let us take care of your on-premise deployments to achieve the best possible performance and accuracy.
                         </div>
-                        <a href="{{ .Site.Params.mailchimp_contact_form }}" class="start-btn theme-btn">Contact sales</a>
+                        <a href="{{ .Site.Params.mailchimp_contact_form }}" class="theme-btn btn-style-five btn-small w-100">
+                            <span class="txt">Contact sales</span>
+                        </a>
                         <ul class="price-list">
                             <li>Performance & Deployment Consulting
                                 <a class="a" role="note" tabindex="0"
