--- a/qdrant-landing/themes/qdrant/static/css/blocks/_prices-page.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_prices-page.scss
@@ -13,6 +13,10 @@
   @include media-breakpoint-up(lg) {
     padding-top: 140px;
   }
+
+  h4 {
+    font-weight: 400;
+  }
 }
 
 .price-block {
@@ -35,13 +39,13 @@
   color: var(--brand-secondary);
   border-bottom: 1px solid #f2f2f2;
   font-family: $font-family-non-content;
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 700;
   line-height: 1.3em;
 }
 
 .price-block .inner-box .content-box {
-  padding: 40px 28px;
+  padding: 30px 28px;
   position: relative;
   text-align: center;
 }
@@ -50,7 +54,7 @@
   position: relative;
   color: var(--brand-primary);
   font-family: $font-family-non-content;
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 700;
 }
 
