article cards borders, slider height, contact us

--- a/qdrant-landing/themes/qdrant/static/css/blocks/_article-card.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_article-card.scss
@@ -7,7 +7,7 @@
   background: var(--white);
 
   &_border {
-    box-shadow: 0 0 0 1px var(--brand-dark-gray);
+    box-shadow: 0 0 0 1px var(--brand-mid-grey);
   }
 
   &_contrast {
