--- a/qdrant-landing/themes/qdrant/layouts/articles/single.html
+++ b/qdrant-landing/themes/qdrant/layouts/articles/single.html
@@ -32,7 +32,7 @@
 
             <!-- Project Block -->
             <div class="d-flex col-md-4 col-sm-12">
-                {{ partial "article-card" (dict "context" . "classes" "article-card_border") }}
+                {{ partial "article-card" (dict "context" .) }}
             </div>
             {{ end }}
         </div>
